# nrpe

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Changelog  LEGAL  Makefile.in  README  README.SSL  README.SSL.md  README.Solaris  README.md  SECURITY  SECURITY.md  THANKS  aclocal.m4  configure  configure.ac  configure.in  init-script  init-script.debian  init-script.debian.in  init-script.freebsd  init-script.freebsd.in  init-script.suse.in  nrpe.cfg  nrpe.cfg.in  nrpe.spec  nrpe.spec.in  nrpe.xinetd.in  paths.in  python-tests.py  security-test-2  subst.in  test  test-wrapper  travis-test-1  uninstall.in  update-cfg.pl  update-version
.github/workflows/: build.yml
build-aux/: add_group_user  ax_nagios_get_distrib  ax_nagios_get_files  ax_nagios_get_inetd  ax_nagios_get_init  ax_nagios_get_os  ax_nagios_get_paths  ax_nagios_get_ssl  custom_help.m4
common/: common.h  config.h.in
contrib/: README.nrpe_check_control
docs/: NRPE.odt
include/: acl.h  common.h  common.h.in  config.h.in  dh.h  nrpe-ssl.h  nrpe.h  ssl.h  utils.h
macros/: README.md  ax_nagios_get_distrib.m4  ax_nagios_get_files.m4  ax_nagios_get_inetd.m4  ax_nagios_get_init.m4  ax_nagios_get_os.m4  ax_nagios_get_paths.m4  ax_nagios_get_ssl  ax_nagios_get_ssl.m4
package/solaris/: Makefile.in
package/solaris/pkg/: i.config  nrpe  nrpe.xml  postinstall  r.config
sample-config/: nrpe.cfg.in  nrpe.xinetd.in
src/: Makefile.in  acl.c  check_nrpe.c  dh.h  generate_dh_params.c  netutils.c  netutils.h  nrpe-ssl.c  nrpe.c  nrpe.h  print_c_code.c  snprintf.c  ssl.c  utils.c  utils.h
startup/: bsd-init  bsd-init.in  debian-init  debian-init.in  default-inetd  default-inetd.in  default-init  default-init.in  default-service  default-service.in  default-socket-svc.in  default-socket.in  default-xinetd  default-xinetd.in  gentoo-init.in  mac-inetd.plist.in  mac-org.nagios.PKG_NAME.plist  mac-org.nagios.PKG_NAME.plist.in  mac-org.plist.in  newbsd-init.in  openbsd-init.in  openrc-conf  openrc-conf.in  openrc-init  openrc-init.in  rh-upstart-init.in  solaris-PKG_NAME.xml  solaris-PKG_NAME.xml.in  solaris-inetd.xml.in  solaris-init.xml.in  tmpfile.conf.in  upstart-init  upstart-init.in
tests/: 000-startup.t  001-normal.t  002-ipv6.t  003-nossl.t  004-ssl.t  010-no-ssl.t  011-no-ssl-protocol.t  020-ssl.t  021-ssl-protocol.t  050-misc.t  999-shutdown.t  Makefile.in  misc.cfg.in  nrpe.pm
tests/checks/: lorem.10000.txt  lorem.60000.txt  lorem.70000.txt  state  test-lorem  timeout
tests/configs/: check_nrpe.cfg  ipv6-disallowed.cfg  ipv6-only.cfg  ipv6.cfg  log_facility.cfg  normal.cfg  nossl.cfg  ssl-invalid.cfg  ssl-invalid2.cfg  ssl-invalid3.cfg  ssl-invalid4.cfg  ssl-invalid5.cfg  ssl.cfg
tests/configs/certs/: nrpe.crt  nrpe.key  other.crt  other.key
tests/configs/conf.d/: commands.cfg
